<resources>
    <string name="app_name">Where</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_add">Add</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_myPage">My Page</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
